--- a/wokshop_wallslip.tex
+++ b/wokshop_wallslip.tex
@@ -121,9 +121,9 @@
 \newcolumntype{P}[1]{>{\raggedright}p{#1}}
 
 \institute[E.N.S. Lyon]{Laboratoire de physique, Ecole Normale Sup\'{e}rieure de Lyon}
-\title[Yoghurt under stress]{Yoghurt under stress}
+\title[Yoghurt wrinkling]{Wrinkling of a confined porous layer}
 \author[M. Leocmach]{Mathieu Leocmach}
-\date{1st June 2014}
+\date{24\textsuperscript{th} September 2014}
 \titlegraphic{
 	\includegraphics[height=2\baselineskip,clip=true, trim=6mm 14mm 6mm 0]{NEW-Logo-ERC-OUTLINE}\quad
 	\includegraphics[height=2\baselineskip]{logo_ums_grand}\quad
@@ -192,18 +192,16 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 
 \begin{frame}{Fundamental issues in biogels}
 \begin{itemize}
-\item Linear elasticity is not well understood \textit{\scriptsize Gardel et al. Science 2004}
-\item Strain and stress stiffening \textit{\scriptsize Storm et al. Nature 2005}
-\item Fractures \textit{\scriptsize Bonn et al. Science 1998, Baumberger et al. Nature Material 2006}
+\item Gel stability and solvent expulsion (syn\ae{}resis) \textit{\scriptsize Bartlett et al. PRE 2012}
 \item Mechanical instabilities and morphogenesis \textit{\scriptsize Shyer et al. Science 2013}
 \end{itemize}
 \begin{tabu}{X[c]X[c]}
-\includegraphics[height=6\baselineskip]{Bonn_fracture} &
-\includegraphics[height=6\baselineskip]{Villi_sq}
+\includegraphics[height=8\baselineskip]{faisselle} &
+\includegraphics[height=8\baselineskip]{Villi_sq}
 \end{tabu}
 \begin{block}{Our questions}
 \begin{itemize}
-\item What is the behaviour of a biogel under shear deep into the nonlinear regime?
+\item What is the role of boundary conditions?
 \item What is the role of the solvent in mechanical instabilities?
 \end{itemize}
 \end{block}
@@ -235,7 +233,7 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 			},
 		%xmode=log,
 		%xmin=1e2,xmax=3e5,
-		xmin=0, xmax=20,
+		xmin=0, xmax=4,
 		scale only axis,
 		width=\textwidth-4em,
 		height=0.3\textwidth,
@@ -246,8 +244,8 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 		ymin=0, ymax=7, ylabel={pH},
 		extra y ticks={4.6}, extra y tick labels={},%
 		]
-	\addplot+[no marks,Accent2] table[x expr={\thisrowno{0}/3600}]{Y190_cas4_gdl1.pH};
-	\draw[help lines] (axis cs:0,4.6) -- (axis cs:3.88,4.6) node[pos=1, above right, font=\scriptsize] {isoelectric point $pH\approx 4.6$}  -- (axis cs:3.88,0);
+	\addplot+[no marks,Accent2] table[x expr={\thisrowno{0}/3600}]{Y189_cas4_gdl4.pH};
+	\draw[help lines] (axis cs:0,4.6) -- (axis cs:0.26,4.6) node[pos=1, above right, font=\scriptsize] {isoelectric point $pH\approx 4.6$}  -- (axis cs:0.26,0);
 	
 
 	\nextgroupplot[
@@ -255,15 +253,15 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 		ymin=0, ylabel={$\textcolor{Accent2}{G^\prime}, \textcolor{Main}{G^{\prime\prime}}$ (\si{\pascal})},
 		extra x ticks={17}, extra x tick labels={},
 		]
-	\addplot+[no marks,Accent2] table[x expr={\thisrowno{0}/3600}]{cas4_GDL1_Y22.prise};
-	\addplot+[no marks,Main] table[x expr={\thisrowno{0}/3600}, y index=2]{cas4_GDL1_Y22.prise};
+	\addplot+[no marks,Accent2] table[x expr={\thisrowno{0}/3600}]{cas4_GDL4_Y271.prise};
+	\addplot+[no marks,Main] table[x expr={\thisrowno{0}/3600}, y index=2]{cas4_GDL4_Y271.prise};
 	\begin{scope}[font=\scriptsize]
 		%\node[above right] at (rel axis cs:0,0) {casein ``micelles''};
 		%\draw[<-] (axis cs:3.88,654) -- +(1em,0) node[right] {gelation};
-		\node[anchor=base,rotate=80] at (axis cs:2.5,400) {gelation};
+		\node[anchor=base,rotate=80] at (axis cs:0.2,300) {gelation};
 	\end{scope}
 	\end{groupplot}
-	\draw[<-] (g c1r2.south west) ++(0.5em,0) -- +(0,-1em) node[below,font=\footnotesize] {casein ``micelles''};
+	%\draw[<-] (g c1r2.south west) ++(0.5em,0) -- +(0,-1em) node[below,font=\footnotesize] {casein ``micelles''};
 \end{tikzpicture}
 
 \column{0.5\textwidth}
@@ -274,24 +272,31 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 \end{scriptsize}
 \end{columns}
 \end{frame}
-\tikzset{external/force remake=false}
+%\tikzset{external/force remake=false}
 
-\begin{frame}{Linear rheology: Power law (visco)elastic solid}
-\[\text{stress}\rightarrow \sigma = G \gamma\leftarrow\text{strain}\]
-\[\textcolor{Accent1}{\text{storage}\rightarrow} G^\prime + \imath G^{\prime\prime} \textcolor{Accent2}{\leftarrow\text{loss}}\]
-\tikzsetnextfilename{power_law_rheology}
+
+%\tikzset{external/force remake}
+\begin{frame}{Over-acidification: Faster but weaker}
+\tikzsetnextfilename{gelation_GDL}
 \begin{tikzpicture}
-\begin{loglogaxis}[
+\begin{axis}[
 	height=0.8\textheight,
 	width=\textwidth,
-	xlabel={Frequency (\si{\hertz})}, ylabel={\textcolor{Accent1}{Storage} and \textcolor{Accent2}{loss} moduli (\si{\pascal})},
-	domain={6e-2:70},
+	xlabel={time (h)}, ylabel={$G^\prime$ (\si{\pascal})},
+	cycle list name=earthy,
+	no marks,
+	xmin=0, xmax=20,ymin=0,
 	]
-	\addplot[Accent1, only marks, mark=*] table{freqsweep_Y265_cas4_GDL1.txt};
-	\addplot[Accent2, only marks, mark=o] table[y=LossModulus]{freqsweep_Y265_cas4_GDL1.txt};
-	\addplot[Main, no marks]{300*x^0.15}  node[midway, below right] {$G^\prime\sim G^{\prime\prime}\sim f^{0.15}$};	
-\end{loglogaxis}
+	\addplot table[x expr={\thisrowno{0}/3600}]{cas4_GDL1_Y265.prise} node[anchor=base west] {1\%};
+	\addplot table[x expr={\thisrowno{0}/3600}]{cas4_GDL1.25_Y277.prise} node[anchor=base west] {1.25\%};
+	\addplot table[x expr={\thisrowno{0}/3600}]{cas4_GDL1.5_Y275.prise} node[anchor=base west] {1.5\%};
+	\addplot table[x expr={\thisrowno{0}/3600}]{cas4_GDL2_Y268.prise} node[anchor=base west] {2\%};
+	\addplot table[x expr={\thisrowno{0}/3600}]{cas4_GDL3_Y270.prise} node[anchor=base west] {3\%};
+	\addplot table[x expr={\thisrowno{0}/3600}]{cas4_GDL4_Y271.prise} node[anchor=base west, yshift=-0.2em] {4\%};
+\end{axis}
 \end{tikzpicture}
+
+Caseins regain some solubility at low pH.
 \end{frame}
 
 
