fusionne fig 3 (pre-lecture de toutes les tables) et 4 (Labels centrés, noir et blanc)

--- a/generate_long.tex
+++ b/generate_long.tex
@@ -5,6 +5,7 @@
 %\usetikzlibrary{positioning, patterns,topaths,chains,matrix}
 
 \usepackage{pgfplots}
+\usepackage{pgfplotstable}
 \pgfplotsset{compat=1.9}
 \usepgfplotslibrary{groupplots}
 \usepgfplotslibrary{external}
@@ -26,6 +27,6 @@ red!40!yellow,
 %\input{fig_long/structure_finale.pgf}
 \tikzsetnextfilename{prise_cas4}
 \input{fig_long/prise_cas4.pgf}
-\tikzsetnextfilename{prise_cas4_scaling_factors}
-\input{fig_long/prise_cas4_scaling_factors.pgf}
+%\tikzsetnextfilename{prise_cas4_scaling_factors}
+%\input{fig_long/prise_cas4_scaling_factors.pgf}
 \end{document}
