drafts : creep_cas4_gdl4, structure_confocal done: prise_cas2gdl05_T, sweep_cas4

--- a/generate_long.tex
+++ b/generate_long.tex
@@ -26,7 +26,13 @@ red!40!yellow,
 \tikzsetnextfilename{structure_finale}
 %\input{fig_long/structure_finale.pgf}
 \tikzsetnextfilename{prise_cas4}
-\input{fig_long/prise_cas4.pgf}
-%\tikzsetnextfilename{prise_cas4_scaling_factors}
-%\input{fig_long/prise_cas4_scaling_factors.pgf}
+%\input{fig_long/prise_cas4.pgf}
+\tikzsetnextfilename{sweep_cas4}
+%\input{fig_long/sweep_cas4.pgf}
+\tikzsetnextfilename{prise_cas2_gdl05_T}
+%\input{fig_long/prise_cas2_gdl05_T.pgf}
+\tikzsetnextfilename{creep_cas4_gdl4}
+%\input{fig_long/creep_cas4_gdl4.pgf}
+\tikzsetnextfilename{structure_confocal}
+\input{fig_long/structure_confocal.pgf}
 \end{document}
