couleur des lignes du (b) et ymax

--- a/generate_long.tex
+++ b/generate_long.tex
@@ -24,7 +24,7 @@ red!60!yellow,
 red!40!yellow,
 }
 \tikzsetnextfilename{structure_confocal}
-\input{fig_long/structure_confocal.pgf}
+%\input{fig_long/structure_confocal.pgf}
 \tikzsetnextfilename{structure_finale}
 %\input{fig_long/structure_finale.pgf}
 \tikzsetnextfilename{prise_cas4}
@@ -35,4 +35,6 @@ red!40!yellow,
 %\input{fig_long/prise_cas2_gdl05_T.pgf}
 \tikzsetnextfilename{creep_cas4_gdl4}
 %\input{fig_long/creep_cas4_gdl4.pgf}
+\tikzsetnextfilename{basquin}
+\input{fig_long/basquin.pgf}
 \end{document}
