--- a/generate_long.tex
+++ b/generate_long.tex
@@ -36,5 +36,7 @@ red!40!yellow,
 \tikzsetnextfilename{creep_cas4_gdl4}
 %\input{fig_long/creep_cas4_gdl4.pgf}
 \tikzsetnextfilename{basquin}
-\input{fig_long/basquin.pgf}
+%\input{fig_long/basquin.pgf}
+\tikzsetnextfilename{lambda}
+\input{fig_long/lambda.pgf}
 \end{document}
