--- a/plis_beamer.tex
+++ b/plis_beamer.tex
@@ -431,6 +431,7 @@ glycerol 60\%, $\eta=\SI{10}{\milli\pascal\second}$\\
 \includegraphics[width=0.45\textwidth]{XYslice_gly0.jpg}&
 \includegraphics[width=0.45\textwidth]{XYslice_gly60.jpg}
 \end{tabu}
+\tikzsetnextfilename{scalebar_viscosty}
 \tikz\draw[line width=0.2em] (0,0) -- ++(0.045\textwidth,0) node[midway, below] {\SI{10}{\micro\metre}};
 
 May be explained by ``viscoelastic phase separation'' arguments
@@ -438,7 +439,7 @@ May be explained by ``viscoelastic phase separation'' arguments
 
 \begin{frame}{Darcy never beats Poiseuille}
 \tikzsetnextfilename{Darcy_vs_Poiseuille}%
-\input{Darcy_vs_Poiseuille.tikz}
+%\input{Darcy_vs_Poiseuille.tikz}
 
 \begin{center}
 Because desynchronisation
