Annotation des graphs pour bien montrer qu'il s'agit du % de GDL que l'on change

--- a/soundbite_palavas.tex
+++ b/soundbite_palavas.tex
@@ -186,7 +186,7 @@ red!40!yellow,
 \end{description}
 \end{frame}
 
-\begin{frame}{Microscructure: retain network, swell aggregates}
+\begin{frame}{Microscructure: fluorescent confocal microscopy}
 	\tikzsetnextfilename{structure_confocal}
 	\input{fig_soundbite_palavas/structure_confocal.pgf}
 	\begin{itemize}
@@ -196,7 +196,7 @@ red!40!yellow,
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Three creep regimes + softness}
+\begin{frame}{Three creep regimes + softness\hfill\textsc{gdl} 4\%}
 \vfill
 	\tikzsetnextfilename{creep_cas4_gdl4}
 	\input{fig_soundbite_palavas/creep_cas4_gdl4.pgf}
