Référence du PRL en plus du Arxiv

--- a/creep_beamer.tex
+++ b/creep_beamer.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Creep and yielding}
-Just accepted in PRL, \textit{ArXiv 1401.8234}
+\textit{Leocmach et al. PRL 113, 038303 (2014), ArXiv 1401.8234}
 
 \bigskip
 \structure{Merciless yoghurt breakers}
